Add automation file section to "Arquivos" class

--- a/Aulas/7 - Arquivos.ipynb
+++ b/Aulas/7 - Arquivos.ipynb
@@ -289,8 +289,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Automatizando o processo de gravação em arquivos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salvar arquivo com nome definido\n",
+    "\n",
+    "nome_arquivo = 'arquivo001.txt'\n",
+    "\n",
+    "# Abrir um arquivo com o nome definido\n",
+    "arq3 = open(nome_arquivo, \"w\")\n",
+    "\n",
+    "# Escrever um texto no arquivo\n",
+    "arq3.write(\"Incluindo texto no arquivo criado\")\n",
+    "\n",
+    "# Fechar o arquivo (e salvar as modificações feitas)\n",
+    "arq3.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salvar vários arquivos com nomes diferentes\n",
+    "\n",
+    "contador = 1\n",
+    "total_arquivos = 3\n",
+    "\n",
+    "# Para cada arquivo que vamos salvar\n",
+    "while contador <= total_arquivos:\n",
+    "    # Abra um arquivo com um nome diferente\n",
+    "    arquivo = open('arquivo00' + str(contador) + '.txt', \"w\")\n",
+    "    \n",
+    "    # Escreva algo no arquivo\n",
+    "    arquivo.write(\"Incluindo texto no arquivo criado\")\n",
+    "    \n",
+    "    # Feche o arquivo\n",
+    "    arquivo.close()\n",
+    "    \n",
+    "    # Incremente o contador\n",
+    "    contador = contador + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Manipulação de arquivos de texto: % e .format()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
