Update Arquivos class

--- a/Aulas/7 - Arquivos.ipynb
+++ b/Aulas/7 - Arquivos.ipynb
@@ -36,52 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Olá, mundo!\n",
-      "12\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Abrindo o arquivo para leitura\n",
-    "arq1 = open(\"arquivo1.txt\", \"r\")\n",
-    "\n",
-    "# Lendo o arquivo\n",
-    "print(arq1.read())\n",
-    "\n",
-    "# Contar o número de caracteres\n",
-    "print(arq1.tell())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Olá,\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Abrindo o arquivo para leitura\n",
-    "arq1 = open(\"arquivo1.txt\", \"r\")\n",
-    "\n",
-    "# Ler os primeiros 4 caracteres\n",
-    "print(arq1.read(4))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,15 +296,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Manipulação de arquivos de texto: % e .format()"
+    "### Manipulação de arquivos de texto: .format()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nome: Leon\n",
+      "Idade: 34\n",
+      "Altura: 1.65\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Substituir strings em outras strings\n",
+    "template_documento = '''\n",
+    "Nome: {}\n",
+    "Idade: {}\n",
+    "Altura: {}\n",
+    "'''\n",
+    "print(template_documento.format('Leon', 34, 1.65))"
+   ]
   },
   {
    "cell_type": "markdown",
