--- a/Avaliação 1/Avaliação 1.ipynb
+++ b/Avaliação 1/Avaliação 1.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lista de exercícios"
+    "# Lista de exercícios\n",
+    "\n",
+    "Além das respostas, você deve também inserir um texto para cada uma das questões, explicando as decisões feitas para cada parte do programa desenvolvido. Para inserir um comentário dentro do seu código-fonte, adicione uma hashtag no início de cada frase. Por exemplo:\n",
+    "\n",
+    "```python\n",
+    "# Esta linha de código imprime no console a frase 'Olá, mundo!'\n",
+    "print('Olá, mundo!')\n",
+    "```"
    ]
   },
   {
