Update classes Funções and Avaliação 1

--- a/Aulas/6 - Funções.ipynb
+++ b/Aulas/6 - Funções.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "# Criar uma função com parâmetro\n",
+    "# Criar uma função com parâmetro (passar dados para a função)\n",
     "def primeiraFunc(nome):\n",
     "    print('Olá, %s!' %(nome))\n",
     "\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -337,18 +337,18 @@
    ],
    "source": [
     "# Separando o texto por espaço\n",
-    "def split_string(text):\n",
+    "def separar_texto_por_espaco(text):\n",
     "    return text.split(\" \")\n",
     "\n",
     "texto = \"Esta função será bastante útil para separar grandes volumes de dados.\"\n",
     "\n",
     "# Isso divide a string em uma lista.\n",
-    "print(split_string(texto))"
+    "print(separar_texto_por_espaco(texto))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -361,19 +361,19 @@
    ],
    "source": [
     "# Separando o texto por espaço\n",
-    "def split_string(text):\n",
+    "def separar_texto_por_espaco(text):\n",
     "    return text.split(\" \")\n",
     "\n",
     "texto = \"Esta função será bastante útil para separar grandes volumes de dados.\"\n",
     "\n",
     "# Podemos atribuir o output de uma função, para uma variável\n",
-    "tokens = split_string(texto)\n",
+    "tokens = separar_texto_por_espaco(texto)\n",
     "print(tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -386,13 +386,13 @@
    ],
    "source": [
     "# Função que transforma o texto inteiro em letras minúsculas\n",
-    "def lowercase(text):\n",
+    "def transforma_em_letras_minusculas(text):\n",
     "    return text.lower()\n",
     "\n",
     "caixa_baixa = \"Este Texto Deveria Estar Todo Em LowerCase\"\n",
     "\n",
     "# Chamando a função\n",
-    "lowercased_string = lowercase(caixa_baixa)\n",
+    "lowercased_string = transforma_em_letras_minusculas(caixa_baixa)\n",
     "\n",
     "# Imprime o resultado da chamada da função\n",
     "print(lowercased_string)"
