Update Arquivos class

--- a/Aulas/7 - Arquivos.ipynb
+++ b/Aulas/7 - Arquivos.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "# Abrindo o arquivo para leitura\n",
+    "# Abrindo o arquivo para leitura, o \"r\" vem de \"read\" que significa \"ler\" em inglês\n",
     "arq1 = open(\"arquivo1.txt\", \"r\")\n",
     "\n",
     "# Lendo o arquivo\n",
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Abrindo arquivo para gravação\n",
+    "# Abrindo arquivo para gravação, o \"w\" vem de \"write\" que significa \"escrever\" em inglês\n",
     "arq2 = open(\"arquivo1.txt\", \"w\")"
    ]
   },
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "# Abrindo arquivo para gravação\n",
+    "# Abrindo arquivo para gravação, o \"w\" vem de \"write\" que significa \"escrever\" em inglês\n",
     "arq2 = open(\"arquivo1.txt\", \"w\")\n",
     "\n",
     "# Como abrimos o arquivo apenas para gravação, não podemos usar comandos de leitura.\n",
@@ -101,8 +101,11 @@
     }
    ],
    "source": [
-    "# Abrindo arquivo para gravação\n",
-    "arq2 = open(\"arquivo2.txt\", \"w\")\n",
+    "# Salva em uma variável o nome do arquivo\n",
+    "nome_do_arquivo = \"arquivo2.txt\"\n",
+    "\n",
+    "# Abrindo arquivo para gravação, o \"w\" vem de \"write\" que significa \"escrever\" em inglês\n",
+    "arq2 = open(nome_do_arquivo, \"w\")\n",
     "\n",
     "# Gravando arquivo\n",
     "arq2.write(\"Testando gravação de arquivos em Python \")"
@@ -116,7 +119,7 @@
    "source": [
     "# O programa anterior não funciona, porque precisamos fechar o arquivo!\n",
     "\n",
-    "# Abrindo arquivo para gravação\n",
+    "# Abrindo arquivo para gravação, o \"w\" vem de \"write\" que significa \"escrever\" em inglês\n",
     "arq2 = open(\"arquivo2.txt\", \"w\")\n",
     "\n",
     "# Gravando arquivo\n",
@@ -139,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ler arquivo arquivo3.txt\n",
+    "# Ler arquivo arquivo3.txt, o \"a\" vem de \"append\" que significa \"acrescentar\" em inglês\n",
     "arq3 = open(\"arquivo3.txt\", \"a\")\n",
     "\n",
     "# Adicionar novo conteúdo\n",
@@ -172,7 +175,7 @@
     }
    ],
    "source": [
-    "# Abre arquivo dados.csv em formato de leitura\n",
+    "# Abre arquivo dados.csv em formato de leitura, o \"r\" vem de \"read\" que significa \"ler\" em inglês\n",
     "dados = open(\"dados.csv\", \"r\")\n",
     "\n",
     "# Leitura de cada linha do arquivo\n",
@@ -256,7 +259,7 @@
     "\n",
     "nome_arquivo = 'arquivo001.txt'\n",
     "\n",
-    "# Abrir um arquivo com o nome definido\n",
+    "# Abrir um arquivo com o nome definido, o \"w\" vem de \"write\" que significa \"escrever\" em inglês\n",
     "arq3 = open(nome_arquivo, \"w\")\n",
     "\n",
     "# Escrever um texto no arquivo\n",
